@@ -1,3 +1,9 @@
+2008-01-10  Raksit Ashok  <raksit@google.com>
+
+	PR rtl-optimization/27971
+	* combine.c (find_split_point): introduced a new split for certain
+	types of mem rtx.
+
 2008-01-10  DJ Delorie  <dj@redhat.com>
 
 	* config/m32c/m32c.c (m32c_hard_regno_nregs_1): Renamed from...
